# TroopConnect

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  TODO.md  UserFlows.md  docker-compose-local.yml  docker-compose-mail.yml  docker-compose-prod.yml  dump.rdb  manage.py  package-lock.json  package.json  playwright.config.js  pyproject copy.toml  pyproject.toml  pyproject.toml.orig  requirements.txt
app/: Dockerfile.dev  Dockerfile.prod  entrypoint.sh  requirements.txt
app/finance/: admin.py  forms.py  models.py  urls.py  views.py
app/homepage/: admin.py  models.py  tasks.py  urls.py  views.py
app/members/: adapters.py  admin.py  constants.py  context_processors.py  filters.py  forms.py  middleware.py  models.py  signals.py  tasks.py  urls.py  views.py
app/messaging/: admin.py  context_processors.py  forms.py  models.py  tasks.py  urls.py  views.py
app/templates/: base.html
app/tests/: test_admin_list.py  test_agenda.py  test_anime_profile.py  test_data_retention.py  test_documents.py  test_finance.py  test_messaging_permissions.py  test_nav_sections.py  test_onboarding.py  (+3 more)
caddy/: Caddyfile  Caddyfile-default.tpl  Dockerfile  run.sh
e2e/: agenda.spec.js  animateur.spec.js  anonymous.spec.js  finance.spec.js  logout.spec.js  onboarding.spec.js  parent-messaging.spec.js  parent.spec.js  social_login.spec.js  staff.spec.js
homepage/: urls.py
members/: admin.py  filters.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
siteunite/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: base.html  base.html.orig
troopconnect/: .settings.json-default  asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+129 files in other folders)
