[tool.poetry]
name = "siteunite"
version = "0.1.0"
description = ""
authors = ["Tom Debruyne <tdebruyn@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fontawesomefree = "^6.4.0"
django-ses = "^3.4.1"
django-allauth = "^0.61.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.0.0"}
django-widget-tweaks = "^1.4.12"
django-post-office = "^3.6.3"
django-filter = "^23.2"
shortuuid = "^1.0.11"
unidecode = "^1.3.6"
django-simple-history = "^3.3.0"
boto3 = "^1.26.135"
poetry = "^1.7.0"
redis = "^5.0.1"
celery = "^5.3.6"
django = "^5.0.0"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
django-redis = "^5.4.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
djlint = "^1.27.2"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
